added new folder

--- a/algorithm/Graph_BfsDfs.ipynb
+++ b/algorithm/Graph_BfsDfs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,6 +21,31 @@
     "         'D': set(['B']),\n",
     "         'E': set(['B', 'F']),\n",
     "         'F': set(['C', 'E'])}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': {'B', 'C'},\n",
+       " 'B': {'A', 'D', 'E'},\n",
+       " 'C': {'A', 'F'},\n",
+       " 'D': {'B'},\n",
+       " 'E': {'B', 'F'},\n",
+       " 'F': {'C', 'E'}}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph"
    ]
   },
   {
@@ -41,10 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -52,7 +75,7 @@
        "{'A', 'B', 'C', 'D', 'E', 'F'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,9 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -123,9 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -230,9 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -252,9 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -340,22 +355,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A set()\n",
+      "C {'A'}\n",
+      "B {'C', 'A'}\n",
+      "F {'C', 'B', 'A'}\n",
+      "D {'C', 'F', 'B', 'A'}\n",
+      "E {'C', 'B', 'A', 'D', 'F'}\n",
+      "E {'C', 'E', 'B', 'A', 'D', 'F'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'A', 'B', 'C', 'D', 'E', 'F'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# visit all nodes in a graph\n",
     "def bfs(graph, start):\n",
     "    visited, queue = set(), [start]\n",
     "    while queue:\n",
     "        vertex = queue.pop(0)\n",
+    "        print(vertex, visited)\n",
     "        if vertex not in visited:\n",
     "            visited.add(vertex)\n",
     "            queue.extend(graph[vertex] - visited)\n",
     "    return visited\n",
     "\n",
     "bfs(graph, 'A') # {'B', 'C', 'A', 'F', 'D', 'E'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "grid = [[0, 0, 1, 0, 0, 0],\n",
+    "        [0, 0, 1, 0, 0, 0],\n",
+    "        [0, 0, 0, 0, 1, 0],\n",
+    "        [0, 0, 1, 1, 1, 0],\n",
+    "        [0, 0, 0, 0, 1, 0]]\n",
+    "delta = [[-1, 0], # go up\n",
+    "         [ 0,-1], # go left\n",
+    "         [ 1, 0], # go down\n",
+    "         [ 0, 1]] # go right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visited = [len(grid[0]) * [0] ] * len(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "visited"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 4, 5]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [[0, 0, 1, 0, 0, 0],\n",
+    "        [0, 0, 0, 0, 0, 0],\n",
+    "        [0, 0, 0, 0, 1, 0],\n",
+    "        [0, 0, 1, 1, 1, 0],\n",
+    "        [0, 0, 0, 0, 1, 0]]\n",
+    "init = [0, 0]\n",
+    "goal = [len(grid)-1, len(grid[0])-1]\n",
+    "cost = 1\n",
+    "delta = [[-1, 0], # go up\n",
+    "         [ 0,-1], # go left\n",
+    "         [ 1, 0], # go down\n",
+    "         [ 0, 1]] # go right\n",
+    "delta_name = ['^', '<', 'v', '>']\n",
+    "\n",
+    "\n",
+    "def search(grid,init,goal,cost):\n",
+    "    visited = [[0 for r in range(len(grid[0]))] for c in range(len(grid))]\n",
+    "    # visited node in grid\n",
+    "    x = init[0]\n",
+    "    y = init[1]\n",
+    "    g = 0\n",
+    "    visited[x][y] = 1\n",
+    "    queue = [[g, x, y]]\n",
+    "    found = False\n",
+    "    resign = False\n",
+    "    \n",
+    "    while found is False and resign is False:\n",
+    "        if len(queue) == 0:\n",
+    "            resign = True\n",
+    "            return 'fail'\n",
+    "        else:\n",
+    "#             print(queue)\n",
+    "            queue.sort()\n",
+    "            queue.reverse()\n",
+    "#             print(\"sorted: \")\n",
+    "#             print(queue)\n",
+    "#             print(\"\")\n",
+    "            # pop element w/ smallest g value\n",
+    "            next_ = queue.pop()  # pop the last element\n",
+    "            g = next_[0]\n",
+    "            x = next_[1]\n",
+    "            y = next_[2]\n",
+    "            \n",
+    "            \n",
+    "            if x == goal[0] and y == goal[1]:\n",
+    "                found = True\n",
+    "                return next_\n",
+    "                \n",
+    "            else:\n",
+    "                for i in range(len(delta)):\n",
+    "                    x1 = x + delta[i][0]\n",
+    "                    y1 = y + delta[i][1]\n",
+    "                    if x1 >= 0 and x1 < len(grid) and y1 >= 0 and y1 < len(grid[0]):\n",
+    "                        if visited[x1][y1] == 0 and grid[x1][y1] == 0:\n",
+    "                            g1 = g + cost\n",
+    "                            queue.append([g1, x1, y1])\n",
+    "                            visited[x1][y1] = 1\n",
+    "#                 print(queue) \n",
+    "\n",
+    "search(grid,init,goal,cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0], [1, 1, 1]]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [[0,0,0]]\n",
+    "x.append([1,1,1])\n",
+    "x"
    ]
   },
   {
@@ -399,23 +600,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
